Blank list fix and added UI divider
Jank fix for divider not showing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,7 @@ body {
 div {
     color: #1F3D20;
 }
+
+.mat-divider.mat-divider-inset {
+    margin-left: 0px !important;
+}
